@@ -1,3 +1,11 @@
+2008-03-07 Raphael Neider <rneider AT web.de>
+
+	* src/regression/init0.c: new test for initialized arrays of function
+	  pointers
+	* src/regression/Makefile: made a bit more flexible, added init0.c
+	* src/pic/glue.c (emitIvals): hacky fix for initializing from function
+	  pointers, closes #1427663
+
 2008-03-05 Borut Razem <borut.razem AT siol.net>
 
 	* dos/sdccman.lyx: docummented predefined macros SDCC_REVISION,
@@ -23,7 +31,8 @@
 	* src/SDCCutil.c,
 	* src/SDCCutil.h: added getBuildDate()
 	* src/SDCCmain.c (printVersionInfo),
-	* src/SDCCglue.c (initialComments): use getBuildDate() instead of __DATE__
+	* src/SDCCglue.c (initialComments): use getBuildDate() instead of
+	  __DATE__
 	* src/*/ralloc.c: removed IS_OP_RUONLY macro
 	* src/ds390/ralloc.c (packRegisters),
 	* src/mcs51/ralloc.c (packRegisters),
@@ -85,8 +94,8 @@
 
 2008-02-27 Maarten Brock <sourceforge.brock AT dse.nl>
 
-	* src/mcs51/gen.c (genUnpackBits): don't generate ifxJump, instead return
-	  ifx condition
+	* src/mcs51/gen.c (genUnpackBits): don't generate ifxJump, instead
+	  return ifx condition
 	  (genNearPointerGet, genPagedPointerGet, genFarPointerGet,
 	  genCodePointerGet, genGenPointerGet): cleanup aop before generating
 	    ifxJump to fix bug 1838000
